vh => % for container height

--- a/ClientApp/src/components/MessageView/MessagePage.css
+++ b/ClientApp/src/components/MessageView/MessagePage.css
@@ -1,5 +1,7 @@
 .messagePage {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 100%;
+  position: fixed;
+  width: 100%;
 }
